# foocars

./: .gitignore  Basic_Introduction_to_Python.ipynb  Copy_of_Copy_of_FooCars_Step_By_Step.ipynb  Copy_of_FooCars_Step_By_Step.ipynb  Copy_of_Foocars_Images_and_Video_from_Data.ipynb  DockerReadme.md  Dockerfile-car  Dockerfile-train  FooCars_Step_By_Step.ipynb  Foocars_Images_and_Video_from_Data.ipynb  Pipfile  README.md  build_tensorflow32.sh  car.Dockerfile  car.dockerfile  car32.dockerfile  cvplaydata.py  docker.md  docker_build_32_car.sh  docker_build_car.sh  installation.md  requirements.txt  setuppython.sh  tensorflow32.dockerfile
cargenerator/: .generateCar.py.swp  Pipfile  config.toml  generateCar.py  pyproject.toml  readme.md
cargenerator/cargenerator/: .generatecar.py.swp  config.toml  generatecar.py
cargenerator/cargenerator/defaultcar/arduino/teensy-FullAutoDrive-port/: platformio.ini
cargenerator/cargenerator/defaultcar/arduino/teensy-FullAutoDrive-port/src/: FullAutoDrive.ino
cargenerator/cargenerator/defaultcar/data/collected/: readme.md
cargenerator/cargenerator/defaultcar/data/weights/: steerstats.npz  throttlestats.npz  weights-default.h5  weights_throttle.h5
cargenerator/cargenerator/defaultcar/services/: car.service  defines.py  services.md
cargenerator/cargenerator/templatecar/: config.toml
cargenerator/cargenerator/templatecar/services/: carRunner.py
cargenerator/cargenerator/tmp/arduino/teensy-FullAutoDrive-port/: platformio.ini
cargenerator/cargenerator/tmp/arduino/teensy-FullAutoDrive-port/src/: FullAutoDrive.ino
cargenerator/defaultcar/arduino/: readme.md
cargenerator/defaultcar/python/: readme.md
cars/: Pipfile  car.service  pyproject.toml  readme.md
cars/carservices/: pyproject.toml  requirements.txt  systeminstall.sh  tmp.txt
cars/carservices/carservices/: .car.service.swp  .pihattest.py.swp  @  carRunner.py  defines.py  dropout_model.py  dropout_model_throttle.py  pihattest.py  pihattest_noterminal.py
cars/motto/arduino/microFullAutoDrive/src/: microFullAutoDrive.ino
cars/motto/arduino/mottoFullAutoDrive/src/: mottoFullAutoDrive.ino
cars/motto/arduino/oldMOTTOFullAutoDrive/src/: MOTTOFullAutoDrive.ino~
cars/motto/arduino/oldMOTTOInputCapture/src/: MOTTOInputCapture.ino
cars/motto/services/: defines.py  dropout_model.py  mottoLogger.py  oldWORKINGservice.py  oldsteerstats.npz  ottoMicroLogger.py  ottoMicroLogger.service  serial_monitor.py  serial_test.py  steerstats.npz.tmp
cars/otto/arduino/OTTOFullAutoDrive/src/: OTTOFullAutoDrive.ino
cars/otto/arduino/binnedSteer/src/: binnedSteer.ino
cars/otto/services/: .dropout_model.py.swp  carRunner.py  defines.py
cars/ottoMicro/arduino/microFullAutoDrive/: platformio.ini
cars/ottoMicro/arduino/microFullAutoDrive/src/: microFullAutoDrive.ino
cars/ottoMicro/arduino/microStructTest/src/: microStructTest.ino
cars/ottoMicro/services/: copyHistorySteerstatsToPi.py  ottoMicroLogger.py  ottoMicroLogger.service  readme.md
cars/ottoMicro/test/: testShowRCvalues.py  testSlewOnly.py  testTurnOnOffFromPi2.py
cars/ricarto/arduino/FullAutoDrive/src/: FullAutoDrive.ino
cars/ricarto/services/: carRunner.py  defines.py
cars/services/: mottoLogger.py
cars/services/collected_data14/: IMU_2018-02-25_09-24-22.npz  commands_2018-02-25_09-24-22.npz  commands_2018-02-25_09-25-58.npz  commands_2018-02-25_09-26-25.npz  imgs_2018-02-25_09-22-07.npz  imgs_2018-02-25_09-23-12.npz  imgs_2018-02-25_09-23-47.npz  imgs_2018-02-25_09-27-01.npz
cars/templatecar/: readme.md
cars/templatecar/arduino/FullAutoDrive-mini2/: platformio.ini
cars/templatecar/arduino/FullAutoDrive-mini2/src/: FullAutoDrive.ino
cars/templatecar/arduino/microSharpDisplay/: platformio.ini
cars/templatecar/arduino/teensy-FullAutoDrive-port/: .gitignore
cars/templatecar/services/: carRunner.py  defines.py  history_2_22.txt  ottologgerTemp.py  steerstats.npz  weights.h5
cars/templatecar/services/collected_data14/: IMU_2018-02-25_09-22-07.npz  IMU_2018-02-25_09-22-42.npz  IMU_2018-02-25_09-23-27.npz  IMU_2018-02-25_09-23-47.npz  IMU_2018-02-25_09-24-05.npz  IMU_2018-02-25_09-24-39.npz  IMU_2018-02-25_09-24-58.npz  IMU_2018-02-25_09-25-15.npz  IMU_2018-02-25_09-26-25.npz  IMU_2018-02-25_09-26-43.npz  commands_2018-02-25_09-21-02.npz  commands_2018-02-25_09-23-12.npz  commands_2018-02-25_09-23-27.npz  commands_2018-02-25_09-24-05.npz  commands_2018-02-25_09-25-28.npz  commands_2018-02-25_09-26-11.npz  commands_2018-02-25_09-26-43.npz  imgs_2018-02-25_09-21-02.npz  imgs_2018-02-25_09-22-42.npz  imgs_2018-02-25_09-23-27.npz  imgs_2018-02-25_09-24-05.npz  imgs_2018-02-25_09-24-58.npz  imgs_2018-02-25_09-26-11.npz  imgs_2018-02-25_09-26-25.npz  imgs_2018-02-25_09-26-43.npz
cars/ulysses/arduino/FullAutoDrive/src/: FullAutoDrive.ino
cars/ulysses/arduino/MOTTOFullAutoDrive/src/: MOTTOFullAutoDrive.ino
cars/ulysses/arduino/MOTTOInputCapture/: platformio.ini
cars/ulysses/arduino/MOTTOInputCapture/src/: MOTTOInputCapture.ino
cars/ulysses/services/: carRunner.py  defines.py  mottoLogger.py  ottoMicroLogger.py  serial_monitor.py  steerstats.npz  ulyssesLogger.py  weights_2018-04-05_04-25-09_epoch_16.h5
training/: Pipfile  defines.py  dropout_model.py  dropout_model_throttle.py  history_model.py  minidrop_model.py  pyproject.toml  readme.md  steerstats.npz  testmodel.py  train.py  train_history.py  train_throttle.py  training_dashboard.py
training/.streamlit/: config.toml
training/collected_data2/: IMU_2018-02-22_20-21-25.npz  IMU_2018-02-22_20-22-05.npz  IMU_2018-02-22_20-22-56.npz  IMU_2018-02-22_20-23-30.npz  commands_2018-02-22_20-20-36.npz  commands_2018-02-22_20-21-25.npz  commands_2018-02-22_20-21-38.npz  commands_2018-02-22_20-22-22.npz  commands_2018-02-22_20-22-39.npz  commands_2018-02-22_20-22-56.npz  imgs_2018-02-22_20-21-38.npz  imgs_2018-02-22_20-22-22.npz  imgs_2018-02-22_20-23-30.npz
utilities/training/curator/: Pipfile  actionclasses.py  config.toml  curator.py  data_curator.py  data_curator_CB.py  filesettings.py  pyproject.toml  requirements.txt
(+167 files in other folders)
