[tool.poetry]
name = "cargenerator"
version = "0.1.0"
description = "Generates a car, car system service, and car code."
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.7"
toml = "^0.10.1"
argparse = "^1.4.0"
tqdm = "^4.48.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
