[tool.poetry]
name = "training"
version = "0.1.0"
description = "Training for the Foocars"
authors = ["ricklon <rick.rickanderson@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
argparse = "^1.4.0"
tqdm = "^4.48.0"
tensorflow = {url = "https://github.com/PINTO0309/Tensorflow-bin/raw/master/tensorflow-1.15.0-cp37-cp37m-linux_armv7l.whl"}
keras = "2.3.1"
scikit-image = "^0.17.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
