[tool.poetry]
name = "training"
version = "0.1.0"
description = "Training for the Foocars"
authors = ["ricklon <rick.rickanderson@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
argparse = "^1.4.0"
tqdm = "^4.48.0"
tensorflow = "^2.6.0"
keras = "^2.6.0"
matplotlib = "^3.4.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
