[tool.poetry]
name = "training"
version = "0.1.0"
description = "Training for the Foocars"
authors = ["ricklon <rick.rickanderson@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9.0,<3.9.7 || >3.9.7,<3.10.0"
tensorflow = ">=2.6.0,<2.7.0"
streamlit = "^1.21.0"
argparse = "^1.4.0"
tqdm = "^4.65.0"
matplotlib = "3.4.3"


[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
train = "train:train" 

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
