[tool.poetry]
name = "carservices"
version = "0.2.1"
description = ""
authors = ["ricklon <rick.rickanderson@gmail.com>"]


[tool.poetry.dependencies]
python = "^3.7"
# tensorflow-cpu = {version = "^2.5.0", platform = "aarch64"}
"RPi.GPIO" = "^0.7.1"
pyserial = "^3.5"
picamera = "^1.13"
#h5py = "^3.3.0"


numpy = "^1.21.1"
[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.scripts]
car_runner = "carservices.carRunner:main"
test_pihat = "carservices.pihattest:main"
test_pihat_noterm = "carservices.pihattest_noterminal:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
