[tool.poetry]
name = "foocars-curator"
version = "0.1.0"
description = ""
authors = ["Rutgers Games Research and Immersive Design"]

[tool.poetry.dependencies]
python = "^3.5"
PyQt5 = "5.13.2"
numpy = "^1.18.1"
Pillow = "^7.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ['poetry>=0.12"]
build-backend = "poetry.masonry.api"
